--- a/backend/workers/avatars/package.json
+++ b/backend/workers/avatars/package.json
@@ -5,6 +5,7 @@
     "@cloudflare/workers-types": "^3.16.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "eslint-config-custom": "*",
     "typescript": "~4.9.3",
     "wrangler": "^2.1.9"
   },
